--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "exports": "^0.0.1",
     "firebase": "^9.15.0",
+    "firestore": "^1.1.6",
     "mongoose": "^6.7.2",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
